--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 This is the Admin creating an index.html file for TOM $ Jerry
 this is me Tom adding the navigation to the AI-website
+This information below is going the Jerry tax as a web developer thank you 
